infer/tests/codetoanalyze/objc/errors/memory_leaks_benchmark/ArcExample.dot
/* @generated */
digraph iCFG {
8 [label="8:  DeclStmt \n   n$4=_fun___objc_alloc_no_fail(sizeof(class NSString ):unsigned long ) [line 29]\n  *&s:class NSString *=n$4 [line 29]\n " shape="box"]
	

	 8 -> 7 ;
7 [label="7:  Return Stmt \n   n$3=*&s:class NSString * [line 30]\n  *&return:class NSString *=n$3 [line 30]\n " shape="box"]
	

	 7 -> 6 ;
6 [label="6: Exit ArcA_newS \n  " color=yellow style=filled]
	

5 [label="5: Start ArcA_newS\nFormals:  self:class ArcA *\nLocals:  s:class NSString * \n   DECLARE_LOCALS(&return,&s); [line 28]\n " color=yellow style=filled]
	

	 5 -> 8 ;
4 [label="4:  DeclStmt \n   n$2=_fun___objc_alloc_no_fail(sizeof(class NSString ):unsigned long ) [line 23]\n  *&s:class NSString *=n$2 [line 23]\n " shape="box"]
	

	 4 -> 3 ;
3 [label="3:  Return Stmt \n   n$0=*&s:class NSString * [line 24]\n  *&return:class NSString *=n$0 [line 24]\n  n$1=_fun___set_autorelease_attribute(n$0:class NSString *) [line 24]\n " shape="box"]
	

	 3 -> 2 ;
2 [label="2: Exit ArcA_getS \n  " color=yellow style=filled]
	

1 [label="1: Start ArcA_getS\nFormals:  self:class ArcA *\nLocals:  s:class NSString * \n   DECLARE_LOCALS(&return,&s); [line 22]\n " color=yellow style=filled]
	

	 1 -> 4 ;
}
